Closed
Bug 1293206
Opened 9 years ago
Closed 9 years ago
Intermittent dom/media/tests/mochitest/test_peerConnection_basicAudioNATRelay.html | application crashed [@ libc-2.23.so + 0x35418]
Categories
(Core :: WebRTC, defect, P3)
Core
WebRTC
Tracking
()
RESOLVED
FIXED
mozilla51
People
(Reporter: intermittent-bug-filer, Assigned: drno)
References
Details
(Keywords: intermittent-failure)
Attachments
(2 files)
58 bytes,
text/x-review-board-request
|
bwc
:
review+
|
Details |
1.39 KB,
patch
|
jesup
:
review+
ritu
:
approval-mozilla-aurora+
lizzard
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
Updated•9 years ago
|
Rank: 35
Priority: -- → P3
Comment 1•9 years ago
|
||
With just a quick glance, I'm not seeing why that assert would fail:
static void nr_socket_buffered_stun_connected_cb(NR_SOCKET s, int how, void *arg)
{
nr_socket_buffered_stun *sock = (nr_socket_buffered_stun *)arg;
int r, _status;
assert(!sock->connected);
Assignee | ||
Comment 2•9 years ago
|
||
(In reply to Byron Campen [:bwc] from comment #1)
> With just a quick glance, I'm not seeing why that assert would fail:
My only explanation for that would be that we get multiple callbacks for connected. Obviously as we haven't this before my patch in bug 1290365 is the most likely culprit.
Comment hidden (mozreview-request) |
Comment 4•9 years ago
|
||
mozreview-review |
Comment on attachment 8779562 [details]
Bug 1293206: cancel TCP connect callback after connect.
https://reviewboard.mozilla.org/r/70532/#review68012
Attachment #8779562 -
Flags: review?(docfaraday) → review+
Pushed by drno@ohlmeier.org:
https://hg.mozilla.org/integration/autoland/rev/30c27c9a8365
cancel TCP connect callback after connect. r=bwc
Assignee | ||
Updated•9 years ago
|
Flags: needinfo?(drno)
Updated•9 years ago
|
Assignee: nobody → drno
Comment 7•9 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 9 years ago
status-firefox51:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla51
Comment hidden (Intermittent Failures Robot) |
Assignee | ||
Comment 9•9 years ago
|
||
Assignee | ||
Comment 10•9 years ago
|
||
Same patch as the original on which landed in 51, just adapted to 50 and 49, so we can request uplift to unblock uplifting of bug 1290365.
Attachment #8781185 -
Flags: review?(docfaraday)
Assignee | ||
Updated•9 years ago
|
Attachment #8781185 -
Flags: review?(docfaraday) → review?(mfroman)
Updated•9 years ago
|
Attachment #8781185 -
Flags: review?(mfroman) → review+
Assignee | ||
Comment 11•9 years ago
|
||
Comment on attachment 8781185 [details] [diff] [review]
bug1293206_aurora.patch
Approval Request Comment
[Feature/regressing bug #]: The original bug 891551 which added support for TCP ICE candidates already had the problem that the code relied on pending data for the TCP connection to replace the connect callback with the write callback. But we did not have proper testing which exposed the problem.
[User impact if declined]: The user impact of the wrong behavior is not really know, but this patch blocks the landing/uplifting for bug 1290365, which results in a small percentage of WebRTC users not being able to place successful calls when it should be possible for them.
[Describe test coverage new/current, TreeHerder]: The patch itself make our existing test work properly, so no additional test coverage needed.
[Risks and why]: The risk should be small as the same pattern of first canceling the callback before setting it again is already successfully used in several other place in the nICEr code base.
[String/UUID change made/needed]: N/A
Attachment #8781185 -
Flags: approval-mozilla-beta?
Attachment #8781185 -
Flags: approval-mozilla-aurora?
status-firefox49:
--- → affected
status-firefox50:
--- → affected
Comment on attachment 8781185 [details] [diff] [review]
bug1293206_aurora.patch
Has stabilized on Nightly51 for a few days, fixes an intermittent, worth uplifting to Aurora50.
Attachment #8781185 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Assignee | ||
Updated•9 years ago
|
status-firefox48:
--- → wontfix
Comment 13•9 years ago
|
||
bugherder uplift |
![]() |
||
Comment 14•9 years ago
|
||
Comment on attachment 8781185 [details] [diff] [review]
bug1293206_aurora.patch
Should be helpful for WebRTC, let's take it on beta 5
Attachment #8781185 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 15•9 years ago
|
||
bugherder uplift |
You need to log in
before you can comment on or make changes to this bug.
Description
•