Bug 1293206 - Cancel TCP connect callback after connect. r=bwc, a=lizzard